--- a/src/app/pages/kpi-reports/kpi-reports.component.html
+++ b/src/app/pages/kpi-reports/kpi-reports.component.html
@@ -1,13 +1,5 @@
 <div class="main-content">
   <div class="container-fluid">
-    <div class="card">
-      <div class="card-header card-header-success">
-        <h4 class="card-title">KPI & Reports</h4>
-        <p class="card-category">Các chỉ số hiệu suất và báo cáo.</p>
-      </div>
-      <div class="card-body">
-        <p>Nội dung cho trang KPI & Reports sẽ được phát triển ở đây.</p>
-      </div>
-    </div>
+    <p>Content will be updated soon.</p>
   </div>
 </div>
