--- a/src/app/pages/shelf-life/shelf-life.component.html
+++ b/src/app/pages/shelf-life/shelf-life.component.html
@@ -1,1 +1,5 @@
-<p>shelf-life works!</p>
+<div class="main-content">
+  <div class="container-fluid">
+    <p>Content will be updated soon.</p>
+  </div>
+</div>
