--- a/src/app/pages/equipment/equipment.component.html
+++ b/src/app/pages/equipment/equipment.component.html
@@ -1,13 +1,5 @@
 <div class="main-content">
   <div class="container-fluid">
-    <div class="card">
-      <div class="card-header card-header-info">
-        <h4 class="card-title">Equipment</h4>
-        <p class="card-category">Quản lý và theo dõi thiết bị.</p>
-      </div>
-      <div class="card-body">
-        <p>Nội dung cho trang Equipment sẽ được phát triển ở đây.</p>
-      </div>
-    </div>
+    <p>Content will be updated soon.</p>
   </div>
 </div> 
