--- a/src/app/pages/outbound-materials/outbound-materials.component.html
+++ b/src/app/pages/outbound-materials/outbound-materials.component.html
@@ -1,1 +1,5 @@
-<p>outbound-materials works!</p>
+<div class="main-content">
+  <div class="container-fluid">
+    <p>Content will be updated soon.</p>
+  </div>
+</div>
