--- a/src/app/pages/shipment/shipment.component.html
+++ b/src/app/pages/shipment/shipment.component.html
@@ -1,13 +1,5 @@
 <div class="main-content">
   <div class="container-fluid">
-    <div class="card">
-      <div class="card-header card-header-info">
-        <h4 class="card-title">Shipment</h4>
-        <p class="card-category">Manage shipments.</p>
-      </div>
-      <div class="card-body">
-        <p>Content for the Shipment page will be developed here.</p>
-      </div>
-    </div>
+    <p>Content will be updated soon.</p>
   </div>
 </div> 
